--- a/Week4/index.html
+++ b/Week4/index.html
@@ -4,63 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
-    <script>
-      let globalId = 1;
-
-      // Naive Way
-      // function addTodo() {
-      //   const title = document.getElementById("title").value;
-      //   const description = document.getElementById("description").value;
-      //   const originalTodos = document.getElementById("todos").innerHTML;
-      //   document.getElementById("todos").innerHTML =
-      //     originalTodos +
-      //     `<div>
-      //     <p>${title}</p>
-      //     <p>${description}</p>
-      //     <button>Mark as Comlete</button>
-      //   </div>`;
-      // }
-
-      function markAsDone(id) {
-        const parent = document.getElementById(id);
-        parent.children[2].innerHTML = "Done!";
-      }
-
-      function createChild(title, description, id) {
-        const parentDiv = document.createElement("div");
-        const titleP = document.createElement("p");
-        titleP.innerHTML = title;
-        const descriptionP = document.createElement("p");
-        descriptionP.innerHTML = description;
-        const doneButton = document.createElement("button");
-        doneButton.innerHTML = "Mark as done!";
-
-        doneButton.setAttribute("onclick", `markAsDone(${id})`);
-        parentDiv.appendChild(titleP);
-        parentDiv.appendChild(descriptionP);
-        parentDiv.appendChild(doneButton);
-        parentDiv.setAttribute("id", id);
-
-        return parentDiv;
-      }
-
-      function addTodo() {
-        const title = document.getElementById("title").value;
-        const description = document.getElementById("description").value;
-
-        const parentDiv = document.getElementById("todos");
-        parentDiv.appendChild(createChild(title, description, globalId++));
-      }
-    </script>
   </head>
   <body>
     <input type="text" id="title" placeholder="title" /> <br />
     <br />
     <input type="text" id="description" placeholder="description" /> <br />
     <br />
-    <button onclick="addTodo()">Add Todo</button>
+    <!-- <button onclick="addTodo()">Add Todo</button> -->
 
     <div id="todos"></div>
   </body>
+
+  <script>
+    let globalId = 1;
+
+    // Naive Way
+    // function addTodo() {
+    //   const title = document.getElementById("title").value;
+    //   const description = document.getElementById("description").value;
+    //   const originalTodos = document.getElementById("todos").innerHTML;
+    //   document.getElementById("todos").innerHTML =
+    //     originalTodos +
+    //     `<div>
+    //     <p>${title}</p>
+    //     <p>${description}</p>
+    //     <button>Mark as Comlete</button>
+    //   </div>`;
+    // }
+
+    function markAsDone(id) {
+      const parent = document.getElementById(id);
+      parent.children[2].innerHTML = "Done!";
+    }
+
+    function createChild(title, description, id) {
+      const parentDiv = document.createElement("div");
+      const titleP = document.createElement("p");
+      titleP.innerHTML = title;
+      const descriptionP = document.createElement("p");
+      descriptionP.innerHTML = description;
+      const doneButton = document.createElement("button");
+      doneButton.innerHTML = "Mark as done!";
+
+      doneButton.setAttribute("onclick", `markAsDone(${id})`);
+      parentDiv.appendChild(titleP);
+      parentDiv.appendChild(descriptionP);
+      parentDiv.appendChild(doneButton);
+      parentDiv.setAttribute("id", id);
+
+      return parentDiv;
+    }
+
+    function addTodo() {
+      const title = document.getElementById("title").value;
+      const description = document.getElementById("description").value;
+
+      const parentDiv = document.getElementById("todos");
+      parentDiv.appendChild(createChild(title, description, globalId++));
+    }
+
+    //Using State
+    function updateDOMwithState(state) {
+      const parent = document.getElementById("todos");
+      parent.innerHTML = " ";
+      for (let i = 0; i < state.length; i++) {
+        const child = createChild(
+          state[i].title,
+          state[i].description,
+          state[i].id
+        );
+        parent.appendChild(child);
+      }
+    }
+
+    updateDOMwithState([]);
+
+    window.setInterval(async function () {
+      const res = await fetch("https://sum-server.100xdevs.com/todos");
+      const json = await res.json();
+      updateDOMwithState(json.todos);
+    }, 5000);
+  </script>
 </html>
